--- a/site/src/App.css
+++ b/site/src/App.css
@@ -8,7 +8,7 @@
 .container {
     display: flex;
     flex-direction: row;
-    width: 80%;
+    width: fit-content;
     align-items: center;
     gap: 48px;
     margin: 0 auto;
@@ -43,7 +43,7 @@ video {
     display: flex;
     flex-direction: row;
     gap: 0.5rem;
-    width: 65%;
+    width: 100%;
 }
 
 .text-title {
