--- a/site/src/index.css
+++ b/site/src/index.css
@@ -3,7 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  background: linear-gradient(to bottom, #FFAC40 -10%, #FFFFFF 100%);
+  background: linear-gradient(to bottom, #FFFFFF 0%, #FFAC40 110%);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
