--- a/web3/src/index.css
+++ b/web3/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+    /* this is so that*/
+    overflow: hidden;
+}
+
 .laptop iframe {
     width: 140px;
     height: 140px;
@@ -99,7 +104,7 @@
 }
 
 .transition-opacity {
-    transition: opacity 0.2s ease-in-out;
+    transition: opacity 0.35s ease-in-out;
 }
 
 .pointer-events-none {
