--- a/web3/src/index.css
+++ b/web3/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-    /* this is so that*/
+    /* this is to prevent vertical scrolling on mobile */
     overflow: hidden;
 }
 
@@ -104,7 +104,7 @@ body {
 }
 
 .transition-opacity {
-    transition: opacity 0.35s ease-in-out;
+    transition: opacity 1s ease-in-out;
 }
 
 .pointer-events-none {
