--- a/web3/src/index.css
+++ b/web3/src/index.css
@@ -2,120 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-    /* this is to prevent vertical scrolling on mobile */
-    overflow: hidden;
-}
-
-/* prevent selection */
-* {
-    -webkit-touch-callout:none;
-    -webkit-user-select:none;
-    -moz-user-select:none;
-    -ms-user-select:none;
-    user-select:none;
-}
-
-.laptop iframe {
-    width: 320px;
-    height: 320px;
-    border-radius: 160px;
-}
-
-.loader-container {
-    display: flex;
-    position: fixed;
-    inset: 0;
-    background: black;
-    width: 100vw;
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
-}
-
-.loader-box {
-    width: 200px;
-    height: 100px;
-    overflow: hidden;
-}
-
-.loader {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-    height: 100%;
-    width: 100%;
-}
-
-.container {
-    width: 33.33%;
-    display: flex;
-    flex-direction: column;
-    height: 100px;
-    position: relative;
-    align-items: center;
-}
-
-.carousel {
-    display: flex;
-    gap: 1rem;
-    flex-direction: column;
-    position: absolute;
-    width: 100%;
-    transform-origin: center;
-    animation-delay: 0.5s;
-}
-
-.loader .container:nth-child(3) {
-    justify-content: flex-start;
-    justify-items: flex-start;
-    animation: scroll-up 2s infinite ease-in-out;
-    animation-delay: 0.7s;
-}
-
-.loader .container:nth-child(2) {
-    justify-content: flex-end;
-    justify-items: flex-end;
-    animation: scroll-down 2s infinite ease-in-out;
-    animation-delay: 0.5s;
-}
-
-.loader .container:nth-child(1) {
-    justify-content: flex-end;
-    justify-items: flex-end;
-    animation: scroll-down 1.5s infinite ease-in-out;
-    animation-delay: 0.3s;
-}
-
-.icon {
-    font-size: 30px;
-    line-height: 1;
-    margin: 0.8rem 4px;
-}
-
-@keyframes scroll-up {
-    0%, 100% {
-        transform: translateY(0);
-    }
-    50% {
-        transform: translateY(-150%);
-    }
-}
-
-@keyframes scroll-down {
-    0%, 100% {
-        transform: translateY(0);
-    }
-    50% {
-        transform: translateY(150%);
-    }
-}
-
-.transition-opacity {
-    transition: opacity 1s ease-in-out;
-}
-
-.pointer-events-none {
-    pointer-events: none;
+.no-select {
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
